# CCGL

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  FindPackages.cmake  README-zh-cn.md  README.md  annotated.html  annotated_dup.js  basic.h  basic_8cpp.html  basic_8cpp.js  basic_8h.html  basic_8h.js  basic_8h_source.html  ccgl_8h.html  ccgl_8h_source.html  classccgl_1_1_interface-members.html  classccgl_1_1_interface.html  classccgl_1_1_interface.js  classccgl_1_1_model_exception-members.html  classccgl_1_1_model_exception.html  classccgl_1_1_not_copyable-members.html  classccgl_1_1_not_copyable.html  classccgl_1_1_object-members.html  classccgl_1_1_object.html  classccgl_1_1_object.js  classccgl_1_1data__raster_1_1_subset_positions-members.html  classccgl_1_1data__raster_1_1_subset_positions.html  classccgl_1_1data__raster_1_1_subset_positions.js  classccgl_1_1data__raster_1_1cls_raster_data-members.html  classccgl_1_1data__raster_1_1cls_raster_data.html  classccgl_1_1data__raster_1_1cls_raster_data.js  classccgl_1_1db__mongoc_1_1_mongo_client-members.html  classccgl_1_1db__mongoc_1_1_mongo_client.html  classccgl_1_1db__mongoc_1_1_mongo_client.js  classccgl_1_1db__mongoc_1_1_mongo_collection-members.html  classccgl_1_1db__mongoc_1_1_mongo_collection.html  classccgl_1_1db__mongoc_1_1_mongo_collection.js  classccgl_1_1db__mongoc_1_1_mongo_database-members.html  (+78 more)
.github/workflows/: cmake_builds.yml  cmake_builds_with-gdal-mongodb.yml  cmake_builds_with-gdal.yml  cmake_builds_with-mongodb.yml  compile_mongo-c-driver.ps1  deploy_images.yml  deploy_images.yml.bak  download_gdal.ps1  download_mongo-c-driver.ps1
apps/: CMakeLists.txt  CombineRaster.cpp  import_raster.cpp  mask_rasterio.cpp  mask_rasterio.h  mask_rasters.cpp  reclassify_raster.cpp
builddbg/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  version_string.tmp
builddbg/doc/: Doxyfile  Doxyfile.zh-cn  Makefile  cmake_install.cmake
builddbg/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builddbg/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
builddbg/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: FindLLVM.cmake  FindPackages.cmake
doc/: Doxyfile  Doxyfile.in  Doxyfile.zh-cn  travis-doxygen.sh
docker/: Dockerfile.alpine-with-gdal  Dockerfile.alpine-with-gdal-mongodb  README.md
docker/alpine/: Dockerfile
docker/alpine-with-gdal/: Dockerfile
docker/alpine-with-gdal-mongodb/: Dockerfile
docker/alpine-with-mongodb/: Dockerfile
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  defines_0.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_9.js  defines_a.js  files_1.js  files_2.js  (+35 more)
src/: basic.cpp  basic.h  ccgl.h  data_raster.cpp  data_raster.h  data_raster.hpp  db_mongoc.cpp  db_mongoc.h  gdal_handler.h  utils_array.h  utils_filesystem.cpp  utils_filesystem.h  utils_math.h  utils_string.cpp  utils_string.h
test/: CMakeLists.txt  test_global.h  test_main.cpp
test/db/: test_mongo.cpp
test/raster/: test_2d-pos-nomask.cpp  test_raster1d_mask_exceed.cpp  test_raster1d_mask_within.cpp  test_raster1d_nomask.cpp  test_raster1d_split_merge.cpp  test_raster2d_mask.cpp  test_raster2d_nomask.cpp  test_raster2d_split_merge.cpp  test_raster_constructor.cpp
test/utils/: test_filesystem.cpp  test_string.cpp
zh-cn/: annotated.html  annotated_dup.js  basic_8cpp.html  basic_8h.html  basic_8h_source.html  ccgl_8h.html  ccgl_8h_source.html  classccgl_1_1_interface-members.html  classccgl_1_1_interface.html  classccgl_1_1_model_exception-members.html  classccgl_1_1_model_exception.html  classccgl_1_1_not_copyable-members.html  classccgl_1_1_not_copyable.html  classccgl_1_1_not_copyable.js  classccgl_1_1_object-members.html  classccgl_1_1_object.html  classccgl_1_1data__raster_1_1_subset_positions-members.html  classccgl_1_1data__raster_1_1_subset_positions.html  classccgl_1_1data__raster_1_1cls_raster_data-members.html  classccgl_1_1data__raster_1_1cls_raster_data.html  classccgl_1_1data__raster_1_1cls_raster_data.js  classccgl_1_1db__mongoc_1_1_mongo_client-members.html  classccgl_1_1db__mongoc_1_1_mongo_client.html  classccgl_1_1db__mongoc_1_1_mongo_client.js  classccgl_1_1db__mongoc_1_1_mongo_collection-members.html  classccgl_1_1db__mongoc_1_1_mongo_collection.html  classccgl_1_1db__mongoc_1_1_mongo_collection.js  classccgl_1_1db__mongoc_1_1_mongo_database-members.html  classccgl_1_1db__mongoc_1_1_mongo_database.html  classccgl_1_1db__mongoc_1_1_mongo_grid_fs-members.html  classccgl_1_1db__mongoc_1_1_mongo_grid_fs.html  classccgl_1_1db__mongoc_1_1_mongo_grid_fs.js  classccgl_1_1utils__array_1_1_array2_d-members.html  classccgl_1_1utils__array_1_1_array2_d.html  classes.html  data__raster_8cpp.html  data__raster_8cpp.js  data__raster_8h.html  data__raster_8h.js  data__raster_8h_source.html  (+69 more)
zh-cn/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  (+72 more)
(+102 files in other folders)
